created: auth services/routes with jwt token
