# src/routes/users.routes.js
@@ -1,11 +1,18 @@
-import express from 'express';
-import { createTransaction, deleteAllTransactions, deleteTransaction, getAllTransactions, getTransactionById, updateTransaction } from "../controllers/transactions.services"
-import { validateProductBody, validateProductIfPresent, validateTransactionParams, validateUserBody, validateUserIfPresent } from '../middlewares/global.middleware';
-export const transactionsRouter = express.Router();
+import { Router } from "express";
+import {
+  createUser,
+  deleteAllUsers,
+  deleteUser,
+  getAllUsers,
+  getUserById,
+  updateUser
+} from "../controllers/users.controllers.js";
+import { validateEmail, validateUserParams } from "../middlewares/global.middleware.js";
+export const usersRouter = Router();
 
-transactionsRouter.get('/transactions', getAllTransactions);
-transactionsRouter.get('/transactions/:id', validateTransactionParams, getTransactionById);
-transactionsRouter.post('/transactions', validateUserBody, validateProductBody, createTransaction);
-transactionsRouter.patch('/transactions/:id', validateTransactionParams, validateUserIfPresent, validateProductIfPresent, updateTransaction);
-transactionsRouter.delete('/transactions/:id', validateTransactionParams, deleteTransaction);
-transactionsRouter.delete('/transactions', deleteAllTransactions);
+usersRouter.get("/users", getAllUsers);
+usersRouter.post("/users", validateEmail, createUser);
+usersRouter.delete("/users", deleteAllUsers);
+usersRouter.get("/users/:id", validateUserParams, getUserById);
+usersRouter.patch("/users/:id", validateUserParams, validateEmail, updateUser);
+usersRouter.delete("/users/:id", validateUserParams, deleteUser);
